removed some find bugs warnings